compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/funKeyword.jet
fun<!SYNTAX, SYNTAX, SYNTAX, SYNTAX, SYNTAX!><!>